archval/project/av-core/src/cz/cvut/fel/archval/core/avd/parser/ArchvalRulesetGrammarParser.java
// $ANTLR 3.1.3 July 11, 2010 13:49:50 ArchvalRulesetGrammar.g 2011-05-06 14:29:24

    package cz.cvut.fel.archval.core.avd.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ArchvalRulesetGrammarParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VALIDATION_UNIT", "ATOMIC_RULES", "COMPOUND_RULES", "VALIDATE_COMMANDS", "ANALYZE_COMMANDS", "RULE_EXPRESSION", "ATOMIC_RULE_KW", "Name", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMICOLON", "COMPOUND_RULE_KW", "VALIDATE_KW", "ANALYZE_KW", "COMMA", "ALL", "EXISTS", "Vertex", "IN", "VertexSet", "Edge", "EdgeSet", "COLON", "OR", "AND", "NOT", "True", "False", "Number", "Label", "INTERSECT", "UNION", "SETMINUS", "WS"
    };
    public static final int COMPOUND_RULE_KW=17;
    public static final int VALIDATION_UNIT=4;
    public static final int VALIDATE_COMMANDS=7;
    public static final int VertexSet=25;
    public static final int RBRACE=15;
    public static final int ATOMIC_RULES=5;
    public static final int RULE_EXPRESSION=9;
    public static final int False=33;
    public static final int LBRACE=14;
    public static final int ANALYZE_KW=19;
    public static final int SEMICOLON=16;
    public static final int ATOMIC_RULE_KW=10;
    public static final int NOT=31;
    public static final int AND=30;
    public static final int EOF=-1;
    public static final int UNION=37;
    public static final int LPAREN=12;
    public static final int COLON=28;
    public static final int INTERSECT=36;
    public static final int RPAREN=13;
    public static final int WS=39;
    public static final int COMPOUND_RULES=6;
    public static final int IN=24;
    public static final int Number=34;
    public static final int EdgeSet=27;
    public static final int COMMA=20;
    public static final int Edge=26;
    public static final int Vertex=23;
    public static final int ALL=21;
    public static final int OR=29;
    public static final int ANALYZE_COMMANDS=8;
    public static final int VALIDATE_KW=18;
    public static final int Name=11;
    public static final int EXISTS=22;
    public static final int True=32;
    public static final int SETMINUS=38;
    public static final int Label=35;

    // delegates
    // delegators


        public ArchvalRulesetGrammarParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ArchvalRulesetGrammarParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ArchvalRulesetGrammarParser.tokenNames; }
    public String getGrammarFileName() { return "ArchvalRulesetGrammar.g"; }


    public static class validation_unit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "validation_unit"
    // ArchvalRulesetGrammar.g:27:1: validation_unit : ( atomic_rule )* ( compound_rule )* ( validate_command )* ( analyze_command )* EOF -> ^( VALIDATION_UNIT ^( ATOMIC_RULES ( atomic_rule )* ) ^( COMPOUND_RULES ( compound_rule )* ) ^( VALIDATE_COMMANDS ( validate_command )* ) ^( ANALYZE_COMMANDS ( analyze_command )* ) ) ;
    public final ArchvalRulesetGrammarParser.validation_unit_return validation_unit() throws RecognitionException {
        ArchvalRulesetGrammarParser.validation_unit_return retval = new ArchvalRulesetGrammarParser.validation_unit_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF5=null;
        ArchvalRulesetGrammarParser.atomic_rule_return atomic_rule1 = null;

        ArchvalRulesetGrammarParser.compound_rule_return compound_rule2 = null;

        ArchvalRulesetGrammarParser.validate_command_return validate_command3 = null;

        ArchvalRulesetGrammarParser.analyze_command_return analyze_command4 = null;


        Object EOF5_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_compound_rule=new RewriteRuleSubtreeStream(adaptor,"rule compound_rule");
        RewriteRuleSubtreeStream stream_validate_command=new RewriteRuleSubtreeStream(adaptor,"rule validate_command");
        RewriteRuleSubtreeStream stream_analyze_command=new RewriteRuleSubtreeStream(adaptor,"rule analyze_command");
        RewriteRuleSubtreeStream stream_atomic_rule=new RewriteRuleSubtreeStream(adaptor,"rule atomic_rule");
        try {
            // ArchvalRulesetGrammar.g:28:2: ( ( atomic_rule )* ( compound_rule )* ( validate_command )* ( analyze_command )* EOF -> ^( VALIDATION_UNIT ^( ATOMIC_RULES ( atomic_rule )* ) ^( COMPOUND_RULES ( compound_rule )* ) ^( VALIDATE_COMMANDS ( validate_command )* ) ^( ANALYZE_COMMANDS ( analyze_command )* ) ) )
            // ArchvalRulesetGrammar.g:29:2: ( atomic_rule )* ( compound_rule )* ( validate_command )* ( analyze_command )* EOF
            {
            // ArchvalRulesetGrammar.g:29:2: ( atomic_rule )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ATOMIC_RULE_KW) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ArchvalRulesetGrammar.g:29:2: atomic_rule
            	    {
            	    pushFollow(FOLLOW_atomic_rule_in_validation_unit94);
            	    atomic_rule1=atomic_rule();

            	    state._fsp--;

            	    stream_atomic_rule.add(atomic_rule1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // ArchvalRulesetGrammar.g:30:2: ( compound_rule )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMPOUND_RULE_KW) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ArchvalRulesetGrammar.g:30:2: compound_rule
            	    {
            	    pushFollow(FOLLOW_compound_rule_in_validation_unit98);
            	    compound_rule2=compound_rule();

            	    state._fsp--;

            	    stream_compound_rule.add(compound_rule2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // ArchvalRulesetGrammar.g:31:2: ( validate_command )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==VALIDATE_KW) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // ArchvalRulesetGrammar.g:31:2: validate_command
            	    {
            	    pushFollow(FOLLOW_validate_command_in_validation_unit102);
            	    validate_command3=validate_command();

            	    state._fsp--;

            	    stream_validate_command.add(validate_command3.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // ArchvalRulesetGrammar.g:32:2: ( analyze_command )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ANALYZE_KW) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // ArchvalRulesetGrammar.g:32:2: analyze_command
            	    {
            	    pushFollow(FOLLOW_analyze_command_in_validation_unit106);
            	    analyze_command4=analyze_command();

            	    state._fsp--;

            	    stream_analyze_command.add(analyze_command4.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_validation_unit110);  
            stream_EOF.add(EOF5);



            // AST REWRITE
            // elements: validate_command, atomic_rule, compound_rule, analyze_command
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 34:2: -> ^( VALIDATION_UNIT ^( ATOMIC_RULES ( atomic_rule )* ) ^( COMPOUND_RULES ( compound_rule )* ) ^( VALIDATE_COMMANDS ( validate_command )* ) ^( ANALYZE_COMMANDS ( analyze_command )* ) )
            {
                // ArchvalRulesetGrammar.g:35:2: ^( VALIDATION_UNIT ^( ATOMIC_RULES ( atomic_rule )* ) ^( COMPOUND_RULES ( compound_rule )* ) ^( VALIDATE_COMMANDS ( validate_command )* ) ^( ANALYZE_COMMANDS ( analyze_command )* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VALIDATION_UNIT, "VALIDATION_UNIT"), root_1);

                // ArchvalRulesetGrammar.g:36:9: ^( ATOMIC_RULES ( atomic_rule )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ATOMIC_RULES, "ATOMIC_RULES"), root_2);

                // ArchvalRulesetGrammar.g:36:24: ( atomic_rule )*
                while ( stream_atomic_rule.hasNext() ) {
                    adaptor.addChild(root_2, stream_atomic_rule.nextTree());

                }
                stream_atomic_rule.reset();

                adaptor.addChild(root_1, root_2);
                }
                // ArchvalRulesetGrammar.g:37:9: ^( COMPOUND_RULES ( compound_rule )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(COMPOUND_RULES, "COMPOUND_RULES"), root_2);

                // ArchvalRulesetGrammar.g:37:26: ( compound_rule )*
                while ( stream_compound_rule.hasNext() ) {
                    adaptor.addChild(root_2, stream_compound_rule.nextTree());

                }
                stream_compound_rule.reset();

                adaptor.addChild(root_1, root_2);
                }
                // ArchvalRulesetGrammar.g:38:9: ^( VALIDATE_COMMANDS ( validate_command )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(VALIDATE_COMMANDS, "VALIDATE_COMMANDS"), root_2);

                // ArchvalRulesetGrammar.g:38:29: ( validate_command )*
                while ( stream_validate_command.hasNext() ) {
                    adaptor.addChild(root_2, stream_validate_command.nextTree());

                }
                stream_validate_command.reset();

                adaptor.addChild(root_1, root_2);
                }
                // ArchvalRulesetGrammar.g:39:6: ^( ANALYZE_COMMANDS ( analyze_command )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ANALYZE_COMMANDS, "ANALYZE_COMMANDS"), root_2);

                // ArchvalRulesetGrammar.g:39:25: ( analyze_command )*
                while ( stream_analyze_command.hasNext() ) {
                    adaptor.addChild(root_2, stream_analyze_command.nextTree());

                }
                stream_analyze_command.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        finally {
        }
        return retval;
    }
    // $ANTLR end "validation_unit"

    public static class atomic_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "atomic_rule"
    // ArchvalRulesetGrammar.g:42:1: atomic_rule : ATOMIC_RULE_KW rname= Name LPAREN grname= Name RPAREN LBRACE atomic_rule_spec RBRACE SEMICOLON -> ^( $rname $grname atomic_rule_spec ) ;
    public final ArchvalRulesetGrammarParser.atomic_rule_return atomic_rule() throws RecognitionException {
        ArchvalRulesetGrammarParser.atomic_rule_return retval = new ArchvalRulesetGrammarParser.atomic_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token rname=null;
        Token grname=null;
        Token ATOMIC_RULE_KW6=null;
        Token LPAREN7=null;
        Token RPAREN8=null;
        Token LBRACE9=null;
        Token RBRACE11=null;
        Token SEMICOLON12=null;
        ArchvalRulesetGrammarParser.atomic_rule_spec_return atomic_rule_spec10 = null;


        Object rname_tree=null;
        Object grname_tree=null;
        Object ATOMIC_RULE_KW6_tree=null;
        Object LPAREN7_tree=null;
        Object RPAREN8_tree=null;
        Object LBRACE9_tree=null;
        Object RBRACE11_tree=null;
        Object SEMICOLON12_tree=null;
        RewriteRuleTokenStream stream_Name=new RewriteRuleTokenStream(adaptor,"token Name");
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_ATOMIC_RULE_KW=new RewriteRuleTokenStream(adaptor,"token ATOMIC_RULE_KW");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_atomic_rule_spec=new RewriteRuleSubtreeStream(adaptor,"rule atomic_rule_spec");
        try {
            // ArchvalRulesetGrammar.g:42:13: ( ATOMIC_RULE_KW rname= Name LPAREN grname= Name RPAREN LBRACE atomic_rule_spec RBRACE SEMICOLON -> ^( $rname $grname atomic_rule_spec ) )
            // ArchvalRulesetGrammar.g:43:2: ATOMIC_RULE_KW rname= Name LPAREN grname= Name RPAREN LBRACE atomic_rule_spec RBRACE SEMICOLON
            {
            ATOMIC_RULE_KW6=(Token)match(input,ATOMIC_RULE_KW,FOLLOW_ATOMIC_RULE_KW_in_atomic_rule186);  
            stream_ATOMIC_RULE_KW.add(ATOMIC_RULE_KW6);

            rname=(Token)match(input,Name,FOLLOW_Name_in_atomic_rule190);  
            stream_Name.add(rname);

            LPAREN7=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_atomic_rule192);  
            stream_LPAREN.add(LPAREN7);

            grname=(Token)match(input,Name,FOLLOW_Name_in_atomic_rule196);  
            stream_Name.add(grname);

            RPAREN8=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_atomic_rule198);  
            stream_RPAREN.add(RPAREN8);

            LBRACE9=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_atomic_rule201);  
            stream_LBRACE.add(LBRACE9);

            pushFollow(FOLLOW_atomic_rule_spec_in_atomic_rule203);
            atomic_rule_spec10=atomic_rule_spec();

            state._fsp--;

            stream_atomic_rule_spec.add(atomic_rule_spec10.getTree());
            RBRACE11=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_atomic_rule205);  
            stream_RBRACE.add(RBRACE11);

            SEMICOLON12=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_atomic_rule207);  
            stream_SEMICOLON.add(SEMICOLON12);



            // AST REWRITE
            // elements: atomic_rule_spec, rname, grname
            // token labels: grname, rname
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_grname=new RewriteRuleTokenStream(adaptor,"token grname",grname);
            RewriteRuleTokenStream stream_rname=new RewriteRuleTokenStream(adaptor,"token rname",rname);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:2: -> ^( $rname $grname atomic_rule_spec )
            {
                // ArchvalRulesetGrammar.g:46:2: ^( $rname $grname atomic_rule_spec )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_rname.nextNode(), root_1);

                adaptor.addChild(root_1, stream_grname.nextNode());
                adaptor.addChild(root_1, stream_atomic_rule_spec.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        finally {
        }
        return retval;
    }
    // $ANTLR end "atomic_rule"

    public static class compound_rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compound_rule"
    // ArchvalRulesetGrammar.g:49:1: compound_rule : COMPOUND_RULE_KW Name LBRACE compound_rule_spec RBRACE SEMICOLON -> ^( Name compound_rule_spec ) ;
    public final ArchvalRulesetGrammarParser.compound_rule_return compound_rule() throws RecognitionException {
        ArchvalRulesetGrammarParser.compound_rule_return retval = new ArchvalRulesetGrammarParser.compound_rule_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COMPOUND_RULE_KW13=null;
        Token Name14=null;
        Token LBRACE15=null;
        Token RBRACE17=null;
        Token SEMICOLON18=null;
        ArchvalRulesetGrammarParser.compound_rule_spec_return compound_rule_spec16 = null;


        Object COMPOUND_RULE_KW13_tree=null;
        Object Name14_tree=null;
        Object LBRACE15_tree=null;
        Object RBRACE17_tree=null;
        Object SEMICOLON18_tree=null;
        RewriteRuleTokenStream stream_COMPOUND_RULE_KW=new RewriteRuleTokenStream(adaptor,"token COMPOUND_RULE_KW");
        RewriteRuleTokenStream stream_Name=new RewriteRuleTokenStream(adaptor,"token Name");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_compound_rule_spec=new RewriteRuleSubtreeStream(adaptor,"rule compound_rule_spec");
        try {
            // ArchvalRulesetGrammar.g:49:15: ( COMPOUND_RULE_KW Name LBRACE compound_rule_spec RBRACE SEMICOLON -> ^( Name compound_rule_spec ) )
            // ArchvalRulesetGrammar.g:50:2: COMPOUND_RULE_KW Name LBRACE compound_rule_spec RBRACE SEMICOLON
            {
            COMPOUND_RULE_KW13=(Token)match(input,COMPOUND_RULE_KW,FOLLOW_COMPOUND_RULE_KW_in_compound_rule232);  
            stream_COMPOUND_RULE_KW.add(COMPOUND_RULE_KW13);

            Name14=(Token)match(input,Name,FOLLOW_Name_in_compound_rule234);  
            stream_Name.add(Name14);

            LBRACE15=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_compound_rule237);  
            stream_LBRACE.add(LBRACE15);

            pushFollow(FOLLOW_compound_rule_spec_in_compound_rule239);
            compound_rule_spec16=compound_rule_spec();

            state._fsp--;

            stream_compound_rule_spec.add(compound_rule_spec16.getTree());
            RBRACE17=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_compound_rule241);  
            stream_RBRACE.add(RBRACE17);

            SEMICOLON18=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_compound_rule243);  
            stream_SEMICOLON.add(SEMICOLON18);



            // AST REWRITE
            // elements: Name, compound_rule_spec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:2: -> ^( Name compound_rule_spec )
            {
                // ArchvalRulesetGrammar.g:53:2: ^( Name compound_rule_spec )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_Name.nextNode(), root_1);

                adaptor.addChild(root_1, stream_compound_rule_spec.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        finally {
        }
        return retval;
    }
    // $ANTLR end "compound_rule"

    public static class validate_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "validate_command"
    // ArchvalRulesetGrammar.g:56:1: validate_command : VALIDATE_KW LPAREN validate_command_params RPAREN SEMICOLON -> validate_command_params ;
    public final ArchvalRulesetGrammarParser.validate_command_return validate_command() throws RecognitionException {
        ArchvalRulesetGrammarParser.validate_command_return retval = new ArchvalRulesetGrammarParser.validate_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VALIDATE_KW19=null;
        Token LPAREN20=null;
        Token RPAREN22=null;
        Token SEMICOLON23=null;
        ArchvalRulesetGrammarParser.validate_command_params_return validate_command_params21 = null;


        Object VALIDATE_KW19_tree=null;
        Object LPAREN20_tree=null;
        Object RPAREN22_tree=null;
        Object SEMICOLON23_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleTokenStream stream_VALIDATE_KW=new RewriteRuleTokenStream(adaptor,"token VALIDATE_KW");
        RewriteRuleSubtreeStream stream_validate_command_params=new RewriteRuleSubtreeStream(adaptor,"rule validate_command_params");
        try {
            // ArchvalRulesetGrammar.g:56:18: ( VALIDATE_KW LPAREN validate_command_params RPAREN SEMICOLON -> validate_command_params )
            // ArchvalRulesetGrammar.g:57:2: VALIDATE_KW LPAREN validate_command_params RPAREN SEMICOLON
            {
            VALIDATE_KW19=(Token)match(input,VALIDATE_KW,FOLLOW_VALIDATE_KW_in_validate_command264);  
            stream_VALIDATE_KW.add(VALIDATE_KW19);

            LPAREN20=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_validate_command266);  
            stream_LPAREN.add(LPAREN20);

            pushFollow(FOLLOW_validate_command_params_in_validate_command268);
            validate_command_params21=validate_command_params();

            state._fsp--;

            stream_validate_command_params.add(validate_command_params21.getTree());
            RPAREN22=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_validate_command271);  
            stream_RPAREN.add(RPAREN22);

            SEMICOLON23=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_validate_command273);  
            stream_SEMICOLON.add(SEMICOLON23);



            // AST REWRITE
            // elements: validate_command_params
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:2: -> validate_command_params
            {
                adaptor.addChild(root_0, stream_validate_command_params.nextTree());

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        finally {
        }
        return retval;
    }
    // $ANTLR end "validate_command"

    public static class analyze_command_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "analyze_command"
    // ArchvalRulesetGrammar.g:63:1: analyze_command : ANALYZE_KW LPAREN analyze_command_params RPAREN SEMICOLON -> analyze_command_params ;
    public final ArchvalRulesetGrammarParser.analyze_command_return analyze_command() throws RecognitionException {
        ArchvalRulesetGrammarParser.analyze_command_return retval = new ArchvalRulesetGrammarParser.analyze_command_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ANALYZE_KW24=null;
        Token LPAREN25=null;
        Token RPAREN27=null;
        Token SEMICOLON28=null;
        ArchvalRulesetGrammarParser.analyze_command_params_return analyze_command_params26 = null;


        Object ANALYZE_KW24_tree=null;
        Object LPAREN25_tree=null;
        Object RPAREN27_tree=null;
        Object SEMICOLON28_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleTokenStream stream_ANALYZE_KW=new RewriteRuleTokenStream(adaptor,"token ANALYZE_KW");
        RewriteRuleSubtreeStream stream_analyze_command_params=new RewriteRuleSubtreeStream(adaptor,"rule analyze_command_params");
        try {
            // ArchvalRulesetGrammar.g:63:17: ( ANALYZE_KW LPAREN analyze_command_params RPAREN SEMICOLON -> analyze_command_params )
            // ArchvalRulesetGrammar.g:64:2: ANALYZE_KW LPAREN analyze_command_params RPAREN SEMICOLON
            {
            ANALYZE_KW24=(Token)match(input,ANALYZE_KW,FOLLOW_ANALYZE_KW_in_analyze_command290);  
            stream_ANALYZE_KW.add(ANALYZE_KW24);

            LPAREN25=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_analyze_command292);  
            stream_LPAREN.add(LPAREN25);

            pushFollow(FOLLOW_analyze_command_params_in_analyze_command294);
            analyze_command_params26=analyze_command_params();

            state._fsp--;

            stream_analyze_command_params.add(analyze_command_params26.getTree());
            RPAREN27=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_analyze_command297);  
            stream_RPAREN.add(RPAREN27);

            SEMICOLON28=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_analyze_command299);  
            stream_SEMICOLON.add(SEMICOLON28);


